force-app/main/default/objects/AVA_B2BLEX__AvaTaxExemptionCertificate__c/AVA_B2BLEX__AvaTaxExemptionCertificate__c.object-meta.xml
<CustomObject>
    <label>AvaTax Exemption Certificate</label>
    <nameField>
        <label>Certificate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AvaTax Exemption Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>