force-app/main/default/objects/AVA_B2BLEX__AvaTaxExemptionCertificate__c/fields/AVA_B2BLEX__Account__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Add the account records with the certificate.</description>
    <inlineHelpText>Add the account records with the certificate.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AvaTax Exemption Certificates</relationshipLabel>
    <relationshipName>AvaTaxExemptionCertificates</relationshipName>
    <type>Lookup</type>
</CustomField>