force-app/main/default/objects/AVA_B2BLEX__AvaTaxExemptionCertificate__c/fields/AVA_B2BLEX__AvaTaxCertificateMapping__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__AvaTaxCertificateMapping__c</fullName>
    <inlineHelpText>AvaTax certificate and company code mapping. This field is managed by AvaTax and should not be modified by user.</inlineHelpText>
    <label>AvaTax Certificate Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>