force-app/main/default/objects/AVA_B2BLEX__AvaTaxExemptionCertificate__c/fields/AVA_B2BLEX__CertificateStatus__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__CertificateStatus__c</fullName>
    <description>Shows the current status of the certificate.</description>
    <inlineHelpText>Shows the current status of the certificate.</inlineHelpText>
    <label>Certificate Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>