force-app/main/default/objects/AVA_B2BLEX__AvaTaxExemptionCertificate__c/fields/AVA_B2BLEX__DateIssued__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__DateIssued__c</fullName>
    <description>Issuing date of the certificate.</description>
    <inlineHelpText>Issuing date of the certificate.</inlineHelpText>
    <label>Signed Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>