force-app/main/default/objects/AVA_B2BLEX__AvaTaxExemptionCertificate__c/fields/AVA_B2BLEX__ExemptionReason__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__ExemptionReason__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The reason the customer is exempt.</description>
    <inlineHelpText>The reason the customer is exempt.</inlineHelpText>
    <label>Exemption Reason</label>
    <referenceTo>AVA_B2BLEX__AvaTaxExemptionReasons__c</referenceTo>
    <relationshipLabel>AvaTax Exemption Certificates</relationshipLabel>
    <relationshipName>AvaTaxExemptionCertificates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>