force-app/main/default/objects/AVA_B2BLEX__AvaTaxExemptionCertificate__c/fields/AVA_B2BLEX__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__ExpirationDate__c</fullName>
    <description>Expiration date of the certificate.</description>
    <inlineHelpText>Expiration date of the certificate.</inlineHelpText>
    <label>Expiration Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>