force-app/main/default/objects/AVA_B2BLEX__AvaTaxExemptionCertificate__c/fields/AVA_B2BLEX__ExposureZone__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__ExposureZone__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>State where the exemption applies.</description>
    <inlineHelpText>State where the exemption applies.</inlineHelpText>
    <label>Exposure Zone</label>
    <referenceTo>AVA_B2BLEX__AvaTaxExposureZone__c</referenceTo>
    <relationshipLabel>AvaTax Exemption Certificates</relationshipLabel>
    <relationshipName>AvaTaxExemptionCertificates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>