force-app/main/default/objects/AVA_B2BLEX__AvaTaxExemptionCertificate__c/validationRules/AVA_B2BLEX__Lock_AvaTax_Certificate_Mapping_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>AVA_B2BLEX__Lock_AvaTax_Certificate_Mapping_Field</fullName>
    <active>true</active>
    <description>User should not be able to delete AvaTax Certificate Mapping</description>
    <errorConditionFormula>PRIORVALUE(AVA_B2BLEX__AvaTaxCertificateMapping__c) != NULL &amp;&amp; AVA_B2BLEX__AvaTaxCertificateMapping__c = NULL</errorConditionFormula>
    <errorDisplayField>AVA_B2BLEX__AvaTaxCertificateMapping__c</errorDisplayField>
    <errorMessage>Please do not edit/delete this value</errorMessage>
</ValidationRule>