force-app/main/default/objects/AVA_B2BLEX__AvaTaxExemptionCertificate__c/listViews/AVA_B2BLEX__All.listView-meta.xml
<ListView>
    <fullName>AVA_B2BLEX__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>